--- a/calculator.html
+++ b/calculator.html
@@ -37,29 +37,50 @@
 let input=document.querySelector('.screen');
 
 let n1,n2;
+let next_n=false;
 let op_pressed;
 
 const buttons=document.querySelector('.buttons');
 
 buttons.addEventListener("click", function(event)
 {
-	if(n1!=undefined)
-	{
-		input.innerText="";
-	}
+
 	
 	if(event.target.className=="numbers")
 	{
-		input.innerText+=event.target.value;   // NA BALO PERIORISMO STO LENGTH
+		if(next_n)
+		{
+			input.innerText="";
+			input.innerText+=event.target.value; 
+			next_n=false;
+
+		}else
+		{
+			input.innerText+=event.target.value;   // NA BALO PERIORISMO STO LENGTH
+			
+		}
+		
+		
 
 	}else
 	{
-		op_pressed=event.target.value;
-		if(op_pressed==".")
+		
+		if(event.target.value=="=")
 		{
-
-		}
+			n2=parseInt(input.innerText);
+			input.innerText=operator(n1,n2,op_pressed).toString();
+			next_n=true;
+		}else
+		{
+			op_pressed=event.target.value;
 			n1=parseInt(input.innerText);
+			next_n=true;
+		}
+		// if(op_pressed==".")
+		// {
+
+		// }
+			
 	}
 	
 
@@ -75,16 +96,16 @@ function operator(a,b,op)
 {
 	if(op=="+")
 	{
-		add
+	    return add(a,b);
 	}else if(op=="-")
 	{
-		sub
+		return sub(a,b);
 	}else if(op=="x")
 	{
-		mul
+		return mul(a,b);
 	}else
 	{
-		div
+		return div(a,b);
 	}
 }
 
